# smalld_rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
examples/: ping_bot.rs
src/: error.rs  gateway.rs  heartbeat.rs  http.rs  identify.rs  intents.rs  lib.rs  listeners.rs  payload.rs  resource.rs  retry.rs  smalld.rs
src/examples/: ping_bot.rs
tests/: http_test.rs
