[package]
name = "smalld_rust"
version = "0.1.0"
authors = ["Princess Lana"]
edition = "2018"

[[bin]]
name = "ping_bot"
path = "src/examples/ping_bot.rs"

[dependencies]
log = "0"
pretty_env_logger = "0"
retry = "1"
serde = "1"
serde_json = "1"
thiserror = "1"
tungstenite = "0"
ureq = { version = "2", features = ["charset", "json"] }
url = "2"
