[package]
name = "smalld_rust"
version = "0.1.0"
authors = ["Princess Lana"]
edition = "2018"
repository = "https://github.com/princesslana/smalld_rust"

[lib]
name = "smalld_rust"
path = "src/lib.rs"

[[example]]
name = "ping_bot"
path = "examples/ping_bot.rs"

[dependencies]
log = "0"
retry = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tungstenite = "0"
ureq = { version = "2", features = ["charset", "json"] }
url = "2"

[dev-dependencies]
pretty_env_logger = "0"

