[package]
name = "smalld_rust"
version = "0.0.0-dev"
authors = ["Princess Lana"]
edition = "2018"
description = "A minimalist client for the Discord API"
readme = "README.md"
homepage = "https://github.com/princesslana/smalld_rust"
repository = "https://github.com/princesslana/smalld_rust"
license = "MIT"
keywords = ["discord"]
categories = ["api-bindings"]

[dependencies]
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tungstenite = "0"
ureq = { version = "2", features = ["charset", "json"] }
url = "2"

[lib]
name = "smalld"

[dev-dependencies]
pretty_env_logger = "0"

